syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/zura-t/go_delivery_system/pb";

message User{
  int64 id = 1;
  string email = 2;
  string name = 3;
  string phone = 4;
  google.protobuf.Timestamp created_at = 5;
}

message UserId{
  int64 id = 1;
}

message CreateUserRequest{
  string email = 1;
  string name = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp access_token_expires_at = 4;
  google.protobuf.Timestamp refresh_token_expires_at = 5;
}

message UpdateUserRequest{
  int64 id = 1;
  string name = 2;
}

message UpdateUserResponse {
  User user = 1;
}

message AddPhoneRequest{
  int64 id = 1;
  string phone = 2;
}

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {};
  rpc GetUser(UserId) returns (User) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc AddPhone(AddPhoneRequest) returns (google.protobuf.Empty) {};
  rpc DeleteUser(UserId) returns (google.protobuf.Empty) {};
}